<resources>
    <string name="app_name">AIIronbotDemo</string>
    <string name="scan">scan</string>
    <string name="stop_scan">stop_scan</string>
    <string name="connect">connect</string>
    <string name="send">send</string>
    <string name="find_service">str_find</string>
    <string name="stop_dance">stop dance</string>
    <string name="start_dance">start dance</string>
    <string name="motor_info">motor info</string>
</resources>
